# Hash-ZK-Verify

./: README.md
backend/: pyproject.toml  requirements.txt
backend/core/zk_engine/: circuit_builder.py  proof_generator.py  verifier.py
backend/core/zk_engine/examples/: age_proof.py  balance_proof.py  password_proof.py
tests/: test_examples.py  test_zk_engine.py
