[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hash-ZK-Verify"
version = "0.1.0"
description = "Zero-Knowledge Proof Learning & Testing Toolkit"
authors = [
    { name="SadiqHash", email="saddeequjp@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "sympy==1.12",
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pytest==8.2.3"
]

[tool.setuptools]
packages = ["backend"]
include-package-data = true

[tool.setuptools.package-data]
"backend" = ["**/*.py"]
